<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            app:cardElevation="6dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bar_background" />

                <TextView
                    android:id="@+id/txtAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:shadowColor="#333"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="0"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:transitionName="txtAppName" />

                <com.jetradarmobile.snowfall.SnowfallView
                    android:id="@+id/snowView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:transitionName="snowView"
                    app:snowflakeAlphaMax="255"
                    app:snowflakeAlphaMin="150"
                    app:snowflakeAngleMax="15"
                    app:snowflakeImage="@drawable/snowflake"
                    app:snowflakeSizeMax="20dp"
                    app:snowflakeSizeMin="5dp"
                    app:snowflakeSpeedMax="4"
                    app:snowflakeSpeedMin="1"
                    app:snowflakesAlreadyFalling="false"
                    app:snowflakesFadingEnabled="true"
                    app:snowflakesNum="80" />

            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/btnMenu1"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_background"
                    android:minWidth="300dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:transitionName="btnMenu">

                    <TextView
                        android:id="@+id/txtMenu1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_menu_home_1"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:transitionName="txtMenu" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/btnMenu2"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_background"
                    android:minWidth="300dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:transitionName="btnMenu">

                    <TextView
                        android:id="@+id/txtMenu2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_menu_home_2"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:transitionName="txtMenu" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/btnMenu3"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_background"
                    android:minWidth="300dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:transitionName="btnMenu">

                    <TextView
                        android:id="@+id/txtMenu3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_menu_home_3"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:transitionName="txtMenu" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/btnMenu4"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_background"
                    android:minWidth="300dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:transitionName="btnMenu">

                    <TextView
                        android:id="@+id/txtMenu4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_menu_home_4"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:transitionName="txtMenu" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/btnMenu5"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_background"
                    android:minWidth="300dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:transitionName="btnMenu">

                    <TextView
                        android:id="@+id/txtMenu5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_menu_home_5"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:transitionName="txtMenu" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/btnMenu6"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_background"
                    android:minWidth="300dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:transitionName="btnMenu">

                    <TextView
                        android:id="@+id/txtMenu6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_menu_home_6"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:transitionName="txtMenu" />
                </FrameLayout>

            </LinearLayout>

        </FrameLayout>
    </LinearLayout>

</RelativeLayout>